Harden visualizer learning workflow and CI